2016-06-02  Franz Holzinger  <franz@ttproducts.de>
	* bug fix: debug array with empty keys
	* new feature: add a header called Array to arrays
	* new feature: declare boolean, integer and float
	* support PHP 7.x and all TYPO3 7.x
	* add README.txt

2015-07-24  Franz Holzinger  <franz@ttproducts.de>
	* tested under TYPO3 7.4.0

2014-10-08  Franz Holzinger  <franz@ttproducts.de>
	* new feature: show private and protected object properties using the Reflection Classes
	* new feature: ignore some variable names, array keys and object member variable names

2014-08-07  Franz Holzinger  <franz@ttproducts.de>
	* fix bug with TRACEDEPTH
	* use a class el for the value output inside of a table

2014-03-19  Franz Holzinger  <franz@ttproducts.de>
	* do not show the files GlobalDebugFunctions.php and DebugFunctions in the trace
	* new feature: debug the devLog
	* new feature: allow debug output into the debug file and into the error_log file simultaneously.

2013-11-21  Franz Holzinger  <franz@ttproducts.de>
	* restructuring of the code for TYPO3 6.2

2013-05-27  Franz Holzinger  <franz@ttproducts.de>
	* new feature: an error_log file can be used instead of the debug output file
	* bug fix: the ip address mask * must allow all ip addresses even the empty one

2012-04-14  Franz Holzinger  <franz@ttproducts.de>
	* set the HTML Doctype to XHTML 1.0 and the meta charset to utf-8

2012-03-28  Franz Holzinger  <franz@ttproducts.de>
	* new feature: parameter STARTFILE to limit the debug output generation to index.php or ajax.php
	* convert the output into UTF-8

2012-03-07  Franz Holzinger  <franz@ttproducts.de>

	* bug fix: not fitting ip addresses shall not overwrite the debug file

2011-12-22  Franz Holzinger  <franz@ttproducts.de>

	* bug fix: No writing of the debug output if the IP address does not fit

2011-12-03  Franz Holzinger  <franz@ttproducts.de>

	* bug fix: Use fh_debug also if the ip address does not match. No debug output shall be shown in the FE.